syntax = "proto2";
option java_package = "com.ceabs.protobuf.proto.maxtrack";
/// Defines the file type to be used
enum FileType {
   FT_COMBINED                      = 0;     /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, TD80, AS80] $DESCRIPTION[Arquivo contendo firmware app e modem] $DESCRIPTION_ENGLISH[Combined firmware app and modem files in one file]
   FT_FIRMWARE_APP                  = 1;     /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, TD80, AS80, A90, MAXIO2, MOBILE_PHONE] $DESCRIPTION[Aplicação firmware] $DESCRIPTION_ENGLISH[Firmware Application]
   FT_FIRMWARE_MODEM                = 2;     /// $SUPPORTEDBY[MXT13X, MXT16X, A6X, MTC8XX, DLR, FINDER, A90] $DESCRIPTION[Aplicação modem] $DESCRIPTION_ENGLISH[Firmware Modem]
   FT_BOOTLOADER                    = 3;     /// $SUPPORTEDBY[MXT13X, MXT16X, A6X, MTC8XX, DLR, FINDER] $DESCRIPTION[Bootloader] $DESCRIPTION_ENGLISH[Bootloader]
   FT_PROFILE                       = 4;     /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A6X, MTC8XX, DLR, FINDER, TD80, AS80, MTC8XX_MCU, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] 
   FT_DEFAULT_PROFILE               = 5;     /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, A6X, MTC8XX, DLR, FINDER, TD80, AS80, A90, MAXIO2, MOBILE_PHONE]
   FT_GEO_LIBRARY                   = 6;     /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, A90] $DESCRIPTION[Biblioteca de regiões] $DESCRIPTION_ENGLISH[Library of regions] 
   FT_AGPS                          = 7;     /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, A6X, MTC8XX, DLR, FINDER, A90, MAXIO2] $DESCRIPTION[Dados de efemérides] $DESCRIPTION_ENGLISH[Ephemeries Data]
   FT_CAN_LIBRARY                   = 8;     /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MTC8XX, DLR, MTC8XX_MCU, FINDER, A90, MAXIO2, MAXIO2_MCU] $DESCRIPTION[Arquivo de biblioteca CAN] $DESCRIPTION_ENGLISH[CAN library file]
   FT_DATA_TERMINAL_STORED_MESSAGES = 10;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION[] $DESCRIPTION_ENGLISH[] 
   FT_KERNEL                        = 11;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION[] $DESCRIPTION_ENGLISH[] 
   FT_FILE_SYSTEM                   = 12;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION[] $DESCRIPTION_ENGLISH[]
   FT_ACTIONS2                      = 14;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, A90] $DESCRIPTION[Ações embarcadas - 2 bibliotecas] $DESCRIPTION_ENGLISH[Embedded actions - 2 library]
   FT_USERS                         = 16;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER] $DESCRIPTION[Biblioteca de usuários] $DESCRIPTION_ENGLISH[Library of users]
   FT_FENCES                        = 20;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, A90] $DESCRIPTION[Biblioteca de fences] $DESCRIPTION_ENGLISH[Library of fences]
   FT_ROUTES                        = 21;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Library of routes]
   FT_CALENDARS                     = 22;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Library of calendars for routes]
   FT_TRIPS                         = 23;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Library of trips for routes]
   FT_SHAPES                        = 24;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Fixed messages]
   FT_STOPS                         = 25;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Library of phones]
   FT_STOPS_TIME                    = 26;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Library of APNs]
   FT_MULTIMEDIA                    = 27;    /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2] $DESCRIPTION_ENGLISH[Audios]
   FT_ROUTES_MULTIMEDIA             = 28;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Areas Filter file]
   FT_STOPS_MULTIMEDIA              = 29;    /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION_ENGLISH[Generic file]
   FT_ADAPTER                       = 30;    /// $SUPPORTEDBY[] $DESCRIPTION_ENGLISH[Maxconfig Adapter Update]
   FT_LORA_COORDINATOR_CONFIG       = 32;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, A40, MTC8XX, DLR, FINDER] 
   FT_MAXIO_CONFIG                  = 33;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, MAXIO, FINDER]
   FT_LORA_ACTIONS                  = 34;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, A90, MAXIO2]
   FT_LORA_WAN_NETWORK              = 35;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER]
   FT_LORA_COORDINATOR_CONFIG_MERGE = 36;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MTC8XX, DLR, FINDER]
   FT_CUSTOM_REPORT_DATA            = 37;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MTC8XX, DLR, FINDER] $DESCRIPTION[Usado para personalizar quais campos serão enviados no ReportData] $DESCRIPTION_ENGLISH[Used to customize which fields will be sent on ReportData]   
   FT_DATA_TERMINAL_CONFIG          = 38;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_DATA_TERMINAL_MAPS            = 39;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_DATA_TERMINAL_WEB             = 40;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_DATA_TERMINAL_CAN_LIBRARIES   = 41;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_WEB_CONTENT                   = 42;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_43                        = 43;    /// $SUPPORTEDBY[]
   FT_RFU_44                        = 44;    /// $SUPPORTEDBY[]   
   FT_RFU_45                        = 45;    /// $SUPPORTEDBY[]   
   FT_RFU_46                        = 46;    /// $SUPPORTEDBY[]   
   FT_RFU_47                        = 47;    /// $SUPPORTEDBY[]   
   FT_RFU_48                        = 48;    /// $SUPPORTEDBY[]   
   FT_RFU_49                        = 49;    /// $SUPPORTEDBY[]   
   FT_RFU_50                        = 50;    /// $SUPPORTEDBY[]   
   FT_A40A_FW                       = 60;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MTC8XX, A40, DLR]
   FT_A40B_FW                       = 61;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MTC8XX, A40, DLR]
   FT_MAXIO_FW                      = 62;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER, MAXIO]
   FT_FINDER_FW                     = 63;    /// $SUPPORTEDBY[MXT13X, MXT16X, MTC8XX, DLR, FINDER]
   FT_TD80_FW                       = 64;    /// $SUPPORTEDBY[MTC8XX, DLR, TD80]
   FT_MCU_FW                        = 65;    /// $SUPPORTEDBY[MTC8XX, DLR, MTC8XX_MCU, A90, MAXIO2, MAXIO2_MCU]
   FT_AS80_FW                       = 66;    /// $SUPPORTEDBY[MTC8XX, DLR, AS80]
   FT_DVR_FW                        = 67;    /// $SUPPORTEDBY[MTC8XX, DLR, DVR]
   FT_WIFI_FW                       = 68;    /// $SUPPORTEDBY[MTC8XX, DLR, WIFI]
   FT_RFU_69                        = 69;    /// $SUPPORTEDBY[]
   FT_RFU_70                        = 70;    /// $SUPPORTEDBY[]
   FT_RFU_71                        = 71;    /// $SUPPORTEDBY[]   
   FT_RFU_72                        = 72;    /// $SUPPORTEDBY[]   
   FT_RFU_73                        = 73;    /// $SUPPORTEDBY[]   
   FT_RFU_74                        = 74;    /// $SUPPORTEDBY[]   
   FT_RFU_75                        = 75;    /// $SUPPORTEDBY[]   
   
   FT_PANEL_CONFIG                  = 101;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_UI_CONFIG                     = 102;    /// $SUPPORTEDBY[]
   FT_RFU_103                       = 103;    /// $SUPPORTEDBY[]
   FT_RFU_104                       = 104;    /// $SUPPORTEDBY[]
   FT_RFU_105                       = 105;    /// $SUPPORTEDBY[]
   FT_RFU_106                       = 106;    /// $SUPPORTEDBY[]
   FT_RFU_107                       = 107;    /// $SUPPORTEDBY[]
   FT_RFU_108                       = 108;    /// $SUPPORTEDBY[]
   FT_RFU_109                       = 109;    /// $SUPPORTEDBY[]
   FT_RFU_110                       = 110;    /// $SUPPORTEDBY[]
   FT_AMPLIFIER1_CONFIG             = 111;    /// $SUPPORTEDBY[MTC8XX, DLR, AS80]
   FT_AMPLIFIER2_CONFIG             = 112;    /// $SUPPORTEDBY[MTC8XX, DLR, AS80]
   FT_RFU_113                       = 113;    /// $SUPPORTEDBY[]
   FT_RFU_114                       = 114;    /// $SUPPORTEDBY[]
   FT_RFU_115                       = 115;    /// $SUPPORTEDBY[]
   FT_RFU_116                       = 116;    /// $SUPPORTEDBY[]
   FT_RFU_117                       = 117;    /// $SUPPORTEDBY[]
   FT_RFU_118                       = 118;    /// $SUPPORTEDBY[]
   FT_RFU_119                       = 119;    /// $SUPPORTEDBY[]
   FT_RFU_120                       = 120;    /// $SUPPORTEDBY[]
   FT_DVR1_CONFIG                   = 121;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_DVR2_CONFIG                   = 122;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_123                       = 123;    /// $SUPPORTEDBY[]
   FT_RFU_124                       = 124;    /// $SUPPORTEDBY[]
   FT_RFU_125                       = 125;    /// $SUPPORTEDBY[]
   FT_RFU_126                       = 126;    /// $SUPPORTEDBY[]
   FT_RFU_127                       = 127;    /// $SUPPORTEDBY[]
   FT_RFU_128                       = 128;    /// $SUPPORTEDBY[]
   FT_RFU_129                       = 129;    /// $SUPPORTEDBY[]
   FT_RFU_130                       = 130;    /// $SUPPORTEDBY[]
   FT_WIFI1_CONFIG                  = 131;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_WIFI2_CONFIG                  = 132;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_WIFI1_ICONTROLLER             = 133;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_WIFI2_ICONTROLLER             = 134;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_135                       = 135;    /// $SUPPORTEDBY[]
   FT_RFU_136                       = 136;    /// $SUPPORTEDBY[]
   FT_RFU_137                       = 137;    /// $SUPPORTEDBY[]
   FT_RFU_138                       = 138;    /// $SUPPORTEDBY[]
   FT_RFU_139                       = 139;    /// $SUPPORTEDBY[]
   FT_RFU_140                       = 140;    /// $SUPPORTEDBY[]
   FT_VALIDATOR_CONFIG              = 141;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_142                       = 142;    /// $SUPPORTEDBY[]
   FT_RFU_143                       = 143;    /// $SUPPORTEDBY[]
   FT_RFU_144                       = 144;    /// $SUPPORTEDBY[]
   FT_RFU_145                       = 145;    /// $SUPPORTEDBY[]
   FT_RFU_146                       = 146;    /// $SUPPORTEDBY[]
   FT_RFU_147                       = 147;    /// $SUPPORTEDBY[]
   FT_RFU_148                       = 148;    /// $SUPPORTEDBY[]
   FT_RFU_149                       = 149;    /// $SUPPORTEDBY[]
   FT_RFU_150                       = 150;    /// $SUPPORTEDBY[]
   FT_TD80_CONFIG                   = 151;    /// $SUPPORTEDBY[MTC8XX, DLR, TD80]
   FT_RFU_152                       = 152;    /// $SUPPORTEDBY[]
   FT_RFU_153                       = 153;    /// $SUPPORTEDBY[]
   FT_RFU_154                       = 154;    /// $SUPPORTEDBY[]
   FT_RFU_155                       = 155;    /// $SUPPORTEDBY[]
   FT_RFU_156                       = 156;    /// $SUPPORTEDBY[]
   FT_RFU_157                       = 157;    /// $SUPPORTEDBY[]
   FT_RFU_158                       = 158;    /// $SUPPORTEDBY[]
   FT_RFU_159                       = 159;    /// $SUPPORTEDBY[]
   FT_RFU_160                       = 160;    /// $SUPPORTEDBY[]
   FT_CV_APP                        = 181;    /// $SUPPORTEDBY[MTC8XX, DLR]   
   FT_CV_FFE                        = 182;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_DLIB_FACE_REC_RESNET_MODEL = 183;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_LBF_MODEL                  = 184;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_5_FACE_LANDMARKS           = 185;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_68_FACE_LANDMARKS          = 186;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_SKLEARN_TRAIN_DATA         = 187;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_FACE_DETECTOR_MODEL        = 188;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_EYES_MODEL                 = 189;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_YAWN_MODEL                 = 190;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_FACE_DIR_MODEL             = 191;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_FACIAL_MASK_MODEL          = 192;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_GLASSES_MODEL              = 193;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_194                       = 194;    /// $SUPPORTEDBY[]
   FT_RFU_195                       = 195;    /// $SUPPORTEDBY[]
   FT_RFU_196                       = 196;    /// $SUPPORTEDBY[]
   FT_RFU_197                       = 197;    /// $SUPPORTEDBY[]
   FT_RFU_198                       = 198;    /// $SUPPORTEDBY[]
   FT_CV_ALL_MODELS                 = 199;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_CV_CFG                        = 200;    /// $SUPPORTEDBY[MTC8XX, DLR]
   FT_RFU_201                       = 201;    /// $SUPPORTEDBY[]   
   FT_RFU_202                       = 202;    /// $SUPPORTEDBY[]   
   FT_RFU_203                       = 203;    /// $SUPPORTEDBY[]   
   FT_RFU_204                       = 204;    /// $SUPPORTEDBY[]   
   FT_RFU_205                       = 205;    /// $SUPPORTEDBY[]   
   FT_ALL                           = 255;    /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A6X, A40, MTC8XX, DLR, FINDER, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Usado para cancelar todas as transferências de arquivos] $DESCRIPTION_ENGLISH[Used to cancel all file transfers]
}
/// Defines all states the Download Process can assume
enum DownloadState {
   DS_NONE                          = 0;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Nada a ser transferido.] $DESCRIPTION_ENGLISH[Nothing to be downloaded.]
   DS_QUEUED                        = 1;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Há arquivos na fila.] $DESCRIPTION_ENGLISH[File is on the queue.]
   DS_DOWNLOADING                   = 2;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Transferindo arquivo.] $DESCRIPTION_ENGLISH[Downloading the file.]
   DS_CANCELED                      = 3;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Transferência de arquivo cancelada] $DESCRIPTION_ENGLISH[File download canceled.]
   DS_FINISHING                     = 4;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Terminando transferência do arquivo] $DESCRIPTION_ENGLISH[Finishing downloading the file.]
   DS_FAILED_RETRIES                = 5;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Falha na transferência após quantidade máxima de tentativas.] $DESCRIPTION_ENGLISH[Download failed after maximum retries.]
   DS_FAILED_SIZE                   = 6;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Falha na transferência devido tamanho incorreto.] $DESCRIPTION_ENGLISH[Download failed due to wrong size.]
   DS_FAILED_CRC                    = 7;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Falha na transferência devido CRC incorreto.] $DESCRIPTION_ENGLISH[Download failed due to wrong CRC.]
   DS_FAILED_VERSION                = 8;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Falha na transferência devido versão incorreta.] $DESCRIPTION_ENGLISH[Download failed due to wrong version.]
   DS_APPLIED                       = 9;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Arquivo transferido aplicado.] $DESCRIPTION_ENGLISH[Transfered file applied. ]
   DS_CANCELED_MULTIPLE_SOURCES     = 10; /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   DS_FAILED_STORAGE_ERROR          = 11; /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, MXT142, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Falha na transferência devido erro de armazenamento.] $DESCRIPTION_ENGLISH[Download failed due to storage error.]
   DS_RFU_12                        = 12; /// $SUPPORTEDBY[]
   DS_RFU_13                        = 13; /// $SUPPORTEDBY[]
   DS_RFU_14                        = 14; /// $SUPPORTEDBY[]
   DS_RFU_15                        = 15; /// $SUPPORTEDBY[]
   DS_RFU_16                        = 16; /// $SUPPORTEDBY[]
}
message FileInfo {
   required FileType fileType             = 1;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 major                  = 2;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 minor                  = 3;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 patch                  = 4;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint64 build                  = 5;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Tempo Unix] $DESCRIPTION_ENGLISH[Unix time]
   optional uint64 fileID                 = 6;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 fileCrc32              = 7;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 fileSize               = 8;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint32 downloadProgress       = 9;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Porcentagem do progresso de transferência.] $DESCRIPTION_ENGLISH[Download progress percentage.]
   optional DownloadState downloadState   = 10; /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Estado da transferência - Descrito em "DownloadState"] $DESCRIPTION_ENGLISH[Described at DownloadState.]
   optional bool isDiff                   = 11; /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   optional uint64 appliedDate            = 12; /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Tempo Unix que o arquivo foi aplicado.] $DESCRIPTION_ENGLISH[Unix time file was applied.]
   optional string fileName               = 13; /// $SUPPORTEDBY[GATEWAY] 
   optional uint64 commandID              = 14; /// $SUPPORTEDBY[MXT13X, MXT16X] $DESCRIPTION[ID do comando que iniciou a transferencia] $DESCRIPTION_ENGLISH[Command ID that trigger transference]
   optional string url                    = 15; /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2, MOBILE_PHONE] $DESCRIPTION[] $DESCRIPTION_ENGLISH[]
   optional string buildInfo		      = 16; /// $SUPPORTEDBY[MTC8XX, DLR, A90] $DESCRIPTION[] $DESCRIPTION_ENGLISH[]
   optional string url_for_wifi           = 17; /// $SUPPORTEDBY[MTC8XX, DLR] $DESCRIPTION[] $DESCRIPTION_ENGLISH[]
}
/// MT 0x0006 - This message should be used to initiate a file change
message FileCommand {
   required uint64 deviceID   = 1;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   required uint64 commandID  = 2;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   repeated FileInfo fileInfo = 3;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Informação do arquivo] $DESCRIPTION_ENGLISH[Information of the file]
   optional uint32 maxTries   = 4;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, MXT180, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Tentativas máximas. Máximo de 255 tentativas] $DESCRIPTION_ENGLISH[Maximum value is 255]
}
/// MT 0x0007 - this message will be used to request parts of file data MT 0x0008 - the requested part of the file
message FileTransfer {
   required uint64 deviceID   = 1;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE]
   required FileInfo fileInfo = 2;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Informação da fatia do arquivo de dados] $DESCRIPTION_ENGLISH[Information of the file slice data]
   required uint32 offset     = 3;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Offset da fatia do arquivo] $DESCRIPTION_ENGLISH[Offset of the file slice part]
   required uint32 size       = 4;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Tamanho da fatia do arquivo] $DESCRIPTION_ENGLISH[Size of the file slice part]
   optional bytes  data       = 5;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A40, A6X, MTC8XX, DLR, FINDER, MTC8XX_MCU, TD80, AS80, A90, MAXIO2, MAXIO2_MCU, MOBILE_PHONE] $DESCRIPTION[Fatia do arquivo] $DESCRIPTION_ENGLISH[File slice data itself]
}
/// MT 0x0009 - This message is used to delete a single file
message FileErase {
   required uint64 deviceID   = 1;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A6X, MTC8XX, DLR, FINDER, TD80, AS80, A90, MAXIO2, MOBILE_PHONE]
   required uint64 commandID  = 2;  /// $SUPPORTEDBY[MXT13X, MXT16X, MXT180, MAXIO, A6X, MTC8XX, DLR, FINDER, TD80, AS80, A90, MAXIO2, MOBILE_PHONE]
   optional FileType fileType = 3;  /// $SUPPORTEDBY[MXT13X, MXT16X, MAXIO, A6X, MTC8XX, DLR, FINDER, TD80, AS80, A90, MAXIO2, MOBILE_PHONE] $DESCRIPTION[Tipo de arquivo a ser excluído.] $DESCRIPTION_ENGLISH[Type of the file to be deleted]
}
message FileChangeBuffer {
   optional uint64 deviceID   = 1;  /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2]
   optional uint64 commandID  = 2;  /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2]
   optional bytes fileData    = 3;  /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2]
   optional FileInfo fileInfo = 4;  /// $SUPPORTEDBY[MTC8XX, DLR, A90, MAXIO2]
}
